--- a/links.html
+++ b/links.html
@@ -70,7 +70,7 @@
                 <div class="row features col-md-9 col-md-offset-1"  style="position: relative; left: 40px">
                 <strong><a class="text-center wow fadeInUp btn btn-primary btn-lg" role="button" href="https://www.netvrk.co/" style="background: #8742D6; color: white"><img src="static/images/netvrk.webp" style="width: 120px; height: 100px">Netvrk</a>
                     <a class="text-center wow fadeInUp btn btn-primary btn-lg" role="button" href="https://app.gala.games/" style="background: #8742D6; color: white"><img src="static/images/gala.png" style="width: 100px; height: 100px">Gala</a>
-                    <a class="text-center wow fadeInUp btn btn-primary btn-lg" role="button" href="https://hello.vrchat.com/" style="background: #8742D6; color: white"><img src="static/images/VRChat.png" style="width: 100px; height: 100px">VRchat</a>
+                    <a class="text-center wow fadeInUp btn btn-primary btn-lg" role="button" href="https://hello.vrchat.com/" style="background: #8742D6; color: white"><img src="static/images/VRCHAT.png" style="width: 100px; height: 100px">VRchat</a>
             </strong></div>
                 <div class="row features col-md-9 col-md-offset-1" style="position: relative; left: 35px">
                 <strong><a class="text-center wow fadeInUp btn btn-primary btn-lg" role="button" href="https://www.somniumspace.com/" style="background: #8742D6; color: white"><img src="static/images/somma.png" style="width: 120px; height: 100px">Netvrk</a>
