--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="jumbotron">
                         <h1><small></small></br>
 						<strong>Central</strong></h1>
-                        <p>новый уровень взаимодействия с виртуальными мирами</p>
+<!--                        <h3 style="font-weight: bold; color: rgb(2, 255, 255)">новый уровень взаимодействия с виртуальными мирами</h3>-->
                         <p><a class="btn btn-primary btn-lg" role="button" href="#feat">Узнать больше</a>
                     </div>
                 </div>
@@ -100,46 +100,19 @@
             </div>
         </section>
         <section class="gallery wow fadeInUp" data-wow-delay="300ms">
-            <div class="container">
-                <div class="row">
-                    <div class="masonry image-gallery">
-                        <div class="grid-sizer"></div>
-                        <div class="gutter-sizer"></div>
-                        <div class="item item-width2">
-                        	<img src="https://media.discordapp.net/attachments/1074032256131281057/1090792452618715216/image.png?width=1920&height=775" alt="" />
-                        </div>
-                        <div class="item">
-                            <img src="https://media.discordapp.net/attachments/1074032256131281057/1090792582499549345/image.png?width=1920&height=828" alt="" />
-                        </div>
-                        <div class="item">
-                              <img src="https://media.discordapp.net/attachments/1074032256131281057/1090792754528931940/image.png?width=1920&height=820" alt="" />
-                        </div>
-                        <div class="item">
-                              <img src="https://media.discordapp.net/attachments/1074032256131281057/1090794717270261760/image.png?width=1701&height=917" alt="" />
-                        </div>
-                        <div class="item">
-                              <img src="https://media.discordapp.net/attachments/1074032256131281057/1090792643614744596/image.png?width=1920&height=823" alt="" />
-                        </div>
-                        <div class="item">
-                              <img src="https://media.discordapp.net/attachments/1074032256131281057/1090801222648340620/image.png?width=1920&height=821" alt="" />
-                        </div>
-
-                    </div>
-
-
-                </div>
-            </div>
-        <section style="position: relative;" id="history">
-            <div  id="photos" class="item item-width2">
-                    <h1 style="font-weight: bold; color: white">Смотреть <a class="disabled" style="text-decoration: none; font-weight: bold; color: #8742D6; text-shadow: 0 0 1px rgb(121, 43, 166),0 0 1px rgb(121, 43, 166),0 0 1px rgb(121, 43, 166),0 0 1px rgb(121, 43, 166);">MVP</a></h1>
-            </div>
-            <div class="item item-width2">
-                            <video width=95% height=95% controls>
-                              <source src="MVP.mp4" type="video/mp4">
-                            </video>
-                        </div>
+            <div class="jumbotron"><h3 class="text-left"><img src="https://media.discordapp.net/attachments/1074032256131281057/1091010425887412284/image.png?width=1410&height=754" alt="" width="60%" height="60%" style="float:left; margin: 7px 7px 7px 0;"/> Входите и перемещайтесь между мирами с помощью порталов</h3></div>
+            <br><br><br><br><br><br><br><br><br>
+            <div class="jumbotron"><h3 class="text-right"><img src="https://media.discordapp.net/attachments/1074032256131281057/1091009274865532928/image.png?width=1410&height=602" alt="" width="60%" height="60%" style="float:right; margin: 7px 7px 7px 0;"/> Найдите нужный вам мир и получите максимальное удовольствие</h3></div>
+            <br><br><br><br><br><br><br><br><br>
+            <div class="jumbotron"><h3 class="text-left"><img src="https://media.discordapp.net/attachments/1074032256131281057/1091060498176413809/image.png?width=1410&height=752" alt="" width="60%" height="60%" style="float:left; margin: 7px 7px 7px 0;"/> Встречайся и общайся с друзьями с помощью чата и аватара</h3></div>
+            <br><br><br><br><br><br><br><br><br>
+            <div class="jumbotron"><h3 class="text-right"><img src="https://media.discordapp.net/attachments/1074032256131281057/1091060631483977828/image.png?width=1410&height=824" alt="" width="60%" height="60%" style="float:right; margin: 7px 7px 7px 0;"/> Оформите свой профиль и расскажите немного о себе</h3></div>
+            <br><br><br><br><br><br><br><br><br>
+            <div class="jumbotron"><h3 class="text-left"><img src="https://media.discordapp.net/attachments/1074032256131281057/1090792452618715216/image.png?width=1410&height=570" alt="" width="60%" height="60%" style="float:left; margin: 7px 7px 7px 0;"/> Создайте или добавьте свой мир, компанию в Central</h3></div>
         </section>
-        <section  class="story wow fadeInUp center-block "  style="background-color: rgb(20, 0, 49); position: relative; top: 150px;" data-wow-delay="300ms">
+
+
+        <section  class="story wow fadeInUp center-block "  style="background-color: rgb(20, 0, 49);" data-wow-delay="300ms">
             <div id="download" class="container-fluid center-block" style=" border: 5px">
                 <div class="container center-block" style="background-color: rgb(20, 0, 49);">
                         <div class="col-md-10 opaline center-block">
