--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       <!-- Site Overlay -->
       <div class="site-overlay"></div>
-
+        <div></div>
         <header id="home">
             <div class="container-fluid">
                 <!-- change the image in style.css to the class header .container-fluid [approximately row 50] -->
@@ -56,6 +56,7 @@
                     <div class="jumbotron">
                         <h1><small></small></br>
 						<strong>Central</strong></h1>
+<!--                        <h3 style="font-weight: bold; color: rgb(2, 255, 255)">новый уровень взаимодействия с виртуальными мирами</h3>-->
                         <p><a class="btn btn-primary btn-lg" role="button" href="#feat">Узнать больше</a>
                     </div>
                 </div>
@@ -127,6 +128,8 @@
                 </div>
             </div>
         </section>
+
+       <section id="photos" class="col-md-12 gallery"><div><iframe  width="560" height="315" style="position: center;" src="https://www.youtube.com/embed/JHEi2YDIxF8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div></section>
 
 
         <section style="position: relative; top: 200px; left: 150px; height: 90%; width: 90%" id="team">
