--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li><a href="#feat" style="font-weight: bold">О проекте</a></li>
             <li><a href="#photos" style="font-weight: bold">MVP</a></li>
             <li><a href="#download" style="font-weight: bold">Скачать</a></li>
-            <li><a href="links.html" style="font-weight: bold">Сайты</a></li>
+            <li><a href="links.html" style="font-weight: bold">Миры</a></li>
         </ul>
       </nav>
 
